deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jokes
  labels:
    name: jokes
