deploy/kubernetes/jokesapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jokesapp-svc
  namespace: jokes
spec:
  selector:
    app.kubernetes.io/name: jokesapp
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
