deploy/kubernetes/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: jokes
spec:
  selector:
    app.kubernetes.io/name: mongodb
  ports:
    - port: 27017
      targetPort: 27017
