deploy/kubernetes/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-proxy
  namespace: jokes
spec:
  selector:
    matchLabels:
      app: nginx-proxy
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-proxy
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 400m
            memory: 256Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
          - name: config
            mountPath: /etc/nginx/conf.d/nginx-proxy.conf
            subPath: nginx-proxy.conf
      - name: adapter
        image: nginx/nginx-prometheus-exporter
        args: ["-nginx.scrape-uri", "http://127.0.0.1/nginx_status"]
        ports:
        - containerPort: 9113
      volumes:
        - name: config
          configMap:
            name: nginx-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
  namespace: jokes
  labels:
    app: nginx-proxy
spec:
  ports:
    - name: http
      port: 9888
      targetPort: 80
  selector:
    app: nginx-proxy
